Remove unused gradle tasks